--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,14 +7,23 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.0
+  get_it: ^8.0.3
+  go_router: ^14.8.1
+  google_ml_kit: ^0.19.0
   google_mlkit_text_recognition: ^0.14.0
+  image_picker: ^1.1.2
+  injectable: ^2.5.0
 
 dev_dependencies:
+  build_runner: ^2.4.15
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  injectable_generator: ^2.7.0
 
 flutter:
   uses-material-design: true
