--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,12 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  dio: ^5.8.0+1
   equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_dotenv: ^5.2.1
   get_it: ^8.0.3
   go_router: ^14.8.1
   google_ml_kit: ^0.19.0
@@ -27,3 +29,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
