--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.0
   flutter_dotenv: ^5.2.1
+  flutter_tesseract_ocr: ^0.4.28
   get_it: ^8.0.3
   go_router: ^14.8.1
   google_ml_kit: ^0.19.0
@@ -31,3 +32,5 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/tessdata/
+    - assets/tessdata_config.json
