--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_mlkit_text_recognition: ^0.14.0
   image_picker: ^1.1.2
   injectable: ^2.5.0
+  opencv_core: ^1.4.1
 
 dev_dependencies:
   build_runner: ^2.4.15
